# Streaming_app

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docker_compose/: Makefile  storages.yaml
streaming_app_authorization/: __init__.py  main.py
streaming_app_authorization/api/: api.py
streaming_app_authorization/database/: __init__.py  db.py
streaming_app_authorization/routes/: __init__.py  user.py
streaming_app_authorization/schemas/: __init__.py  user.py
streaming_app_authorization/services/: __init__.py  authorization_service.py
streaming_app_authorization/utils/: decorator_example.py
tests/: test_authorization.http
